[gan] added shapes.

--- a/incub/mlm_doc/doc/deep_learning/src/sft_centropy.tex
+++ b/incub/mlm_doc/doc/deep_learning/src/sft_centropy.tex
@@ -25,8 +25,8 @@ i.e., $p_i \to 0$, the gradient is \symbol{NaN}.
 % {{{1 Section Solution
 \sec{Solution}
 
-A common trick to solve this is calculating the gradient from loss $\loss$ w.r.t.
-the logits $o_i$  directly, where
+A common trick to solve this is calculating the gradient from loss $\loss$
+w.r.t.{}\ the logits $o_i$  directly, where
 %
 $$
     p_i = {\exp^{o_i} \over \sum_k \exp^{o_k}}.
