[taocp] added watch to notes.

--- a/taocp/notes/main.tex
+++ b/taocp/notes/main.tex
@@ -13,6 +13,7 @@
 % Volume 4B.
 \input{basic_backtrack}
 \input{dancing_links}
+\input{satisfiability}
 
 % Volume 4, PRE-FASCICLE 12A.
 \input{components_and_traversal}
